# langchain-tools

./: .env.example  .gitignore  IMPLEMENTATION_PROGRESS.md  README.md  ai_gym_chatbot_plan.md  pyproject.toml  run_mobile.bat  run_server.sh  setup_mobile.bat  setup_server.sh
app/: main.py
app/ai/: agent_tools.py  context_manager.py  llm_client.py
app/core/: config.py
app/models/: __init__.py  chat_message.py  chat_usage.py  exercise.py  user.py  workout_plan.py
app/repositories/: chat_repo.py  user_repo.py  workout_repo.py
app/routers/: auth_router.py  chat_router.py  workout_router.py
app/schemas/: auth.py  chat.py  exercise.py  workout.py
app/services/: auth_service.py  chat_service.py  exercise_service.py  image_service.py  workout_service.py
app/tools/: db_tools.py  workout_generator.py  youtube_shorts_tool.py
mobile/: .env.example  App.tsx  MOBILE_APP.md  app.json  package.json  tsconfig.json
mobile/src/components/: MessageBubble.tsx  YouTubeShort.tsx
mobile/src/config/: env.ts
mobile/src/services/: authApi.ts  chatSocket.ts
mobile/src/types/: auth.ts  chat.ts
mobile/src/utils/: youtube.ts
static/: app.js  index.html  styles.css
